# aimarketing

./: .hintrc  aimarketing.code-workspace
asset-processing-service/: .env  .gitignore  Dockerfile  pyproject.toml
asset-processing-service/asset_processing_service/: api_client.py  config.py  job_processor.py  main.py  media_processor.py  models.py
nextjs/: middleware.ts  package-lock.json  package.json  tailwind.config.js
nextjs/app/: globals.css  layout.tsx  page.tsx
nextjs/app/(dashboard)/: layout.tsx
nextjs/app/(dashboard)/project/[projectId]/: not-found.tsx  page.tsx
nextjs/app/(dashboard)/project/[projectid]/: loading.tsx  not-found.tsx  page.tsx
nextjs/app/(dashboard)/project/[test]/: page.tsx
nextjs/app/(dashboard)/projects/: page.tsx
nextjs/app/(dashboard)/settings/: loading.tsx  page.tsx
nextjs/app/(dashboard)/templates/: loading.tsx  page.tsx
nextjs/app/(landing)/: page.tsx
nextjs/app/(landing)/pricing/: page.tsx
nextjs/app/api/asset/: route.ts
nextjs/app/api/asset-processing-job/: route.ts
nextjs/app/api/upload/: route.ts
nextjs/components/: ConfigurePromptsStep.tsx  GenerateContentStep.tsx  ManageUploadStep.tsx  ProjectList.tsx  Sidebar.tsx  SubscriptionManager.tsx
nextjs/components/landing/: Footer.tsx
nextjs/components/project-detail/: ProjectDetailView.tsx
nextjs/components/ui/: input.tsx
nextjs/components/upload-step/: ManageUploadStep.tsx  UploadStepHeader.tsx
nextjs/server/: mutation.ts  queries.ts
nextjs/server/db/: schema.ts
nextjs/utils/: formatFileTokens.ts
(+3 files in other folders)
