[tool.poetry]
name = "asset-processing-service"
version = "0.1.0"
description = ""
authors = ["Diane Corriette <dcorriette@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
python-dotenv = "^1.0.1"

[tool.poetry.scripts]
asset-processing-service = "asset_processing_service.main:main"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


